[package]
name = "expression_macro"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for compile-time mathematical expression parsing"
license = "MIT"
repository = "https://github.com/Killer545537/Expression-Parser-Rust"
readme = "../README.md"
keywords = ["math", "parser"]
categories = ["mathematics", "parsing"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0.98"
quote = "1.0.38"
proc-macro2 = "1.0.93"
expression_core = {path = "../expression_core"}
